Stop using sticky JS on HTML publications
- we've got a custom script on publications like /government/publications/heatwave-plan-for-england/beat-the-heat-staying-safe-in-hot-weather that keeps the contents list in the sidebar on the right as the page is scrolled
- this script has a bug that lets the contents overlap the content at the bottom of the page in some situations
- and we don't need the complexity of the JS now that CSS can do this natively
- this isn't supported in Internet Explorer, but it fails gracefully

--- a/app/assets/stylesheets/views/_html-publication.scss
+++ b/app/assets/stylesheets/views/_html-publication.scss
@@ -22,6 +22,11 @@
   }
 
   .contents-list-container {
+    @include govuk-media-query($from: desktop) {
+      position: sticky;
+      top: govuk-spacing(2);
+    }
+
     .direction-rtl & {
       float: right;
     }
